# shinji

./: .gitignore  Cargo.toml
src/: main.rs
