[package]
name = "shinji"
version = "0.0.0"
edition = "2021"

[dependencies.futures-util]
default-features = false
version = "0.3"

[dependencies.tokio]
default-features = false
features = ["macros", "rt"]
version = "1.17"

[dependencies.twilight-cache-inmemory]
default-features = false
version = "0.10"

[dependencies.twilight-gateway]
default-features = false
features = ["rustls-webpki-roots", "zlib-simd"]
version = "0.10"

[dependencies.twilight-http]
default-features = false
features = ["decompression", "rustls-webpki-roots", "trust-dns"]
version = "0.10"

[dependencies.twilight-model]
default-features = false
version = "0.10"
